--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-
-header, nav, article, section, aside, footer {
+header, nav, article, section, footer {
     border: 2px solid lightgrey;
     padding: 10px;
     margin: 5px;
@@ -12,15 +11,20 @@ header {
     border-color: salmon;
 }
 #logo {
-    width: 90px;
-}
-header nav {
-    float: right;
+    width: 80px;
 }
 
-nav ul li {
+#header-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+nav div ul li  {
     display: inline-block;
-    float: left;
     margin: 16px;
     border-color: yellow;
 }
@@ -35,102 +39,26 @@ nav {
 
 
 .container {
-    width: 760px;
+    width: 100%;
+    max-width: 800px;
     margin: 0 auto;
     border: solid lightgrey;
 }
 article {
     border-color: cornflowerblue;
-    width: 500px;
-    float: left;
 }
 
+@media (min-width: 679px) {
+    article {
+        max-width: 780px;
+    }
+}
 section {
     border-color: plum;
 }
 
-aside {
-    border-color: orange;
-    width: 200px;
-    float: right;
-}
 
 footer {
     border-color: darkmagenta;
     clear: both;
 }
-
-
-
-
-
-
-/*
-#header {
-    display: block;
-}
-
-#navbar {
-    
-    background-color: #333;
-    font-family: sans-serif;
-    display: inline-block;
-    float: right;
-}
-
-#navbar section {
-    overflow: hidden;
-    background-color: grey;
-    font-family: sans-serif;
-    display: inline-block;
-	padding: 5px;
-	border: 1px solid white;
-	margin: 1px;    
-    float: left;
-
-}
-
-.container {
-    width: 100%;
-    height: 400px;
-}
-.introduction {
-    padding: 0;
-    margin: 0;
-    width: 50%;
-    height: 100%;
-}
-
-.profile-picture {
-    display: inline;
-    float: left;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    flex-direction: row;
-}
-
-.wording {
-    display: block;
-    float: middle;
-    display: flex;
-    justify-content: center;
-    align-items: left;
-    flex-direction: column;
-}
-
-
-#navbar section a {
-	width: 100px;
-	height: 100px;
-	box-sizing: border-box;
-	padding: 10px;
-	border: 10px solid red;
-	margin: 10px;
-	
-	float: right;
-
-
-#books-navbar, #navbar {
-    display: inline-block;
-}*/
